[project]
name = "geofm"
version = "0.1.0"
description = "Repository for testing out geo-spatial foundation models"
authors = [
    {name = "Samuel Omole",email = "Samuel.Omole@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "terratorch (>=1.1,<2.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "tifffile (>=2025.10.4,<2026.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "pystac-client (>=0.9.0,<0.10.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "streamlit-folium (>=0.25.3,<0.26.0)",
    "folium (>=0.20.0,<0.21.0)",
    "plotly (>=6.4.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
